audio to text--Cantonese part